manifest/ClusterIPService.yml
apiVersion: v1
kind: Service
metadata:
  name: projectserver-svc
spec:
  type: ClusterIP
  selector:
    app: projectserver
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
