manifest/ClusterIPTodoService.yml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todos-svc
spec:
  type: ClusterIP
  selector:
    app: todos
  ports:
    - port: 2020
      protocol: TCP
      targetPort: 3004
