manifest/NodePortTodoService.yml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: todos-svc
spec:
  type: NodePort
  selector:
    app: todos
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3004
