manifest/Service.yml
apiVersion: v1
kind: Service
metadata:
  name: projectserver-svc
spec:
  type: NodePort
  selector:
    app: projectserver 
  ports:
    - name: http
      nodePort: 30080 
      protocol: TCP
      port: 1234 
      targetPort: 3000
