manifest/IngressService.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: projectserver-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: projectserver-svc
            port:
              number: 2345
